# nana

./: .gitignore  .gitmodules  .mailmap  CMakeLists.txt  CMakeSettings.json  README.md  run.py  vcpkg.json
cpp/: CMakeLists.txt  cfr_tetris.cpp  cfr_tetris.h  icon.aps  icon.rc  tbp.cpp
cpp/OLC/: olcPixelGameEngine.h
cpp/Tetris/: Board.cpp  Board.hpp  CFR.cpp  CFR.hpp  Chance.hpp  ChanceMove.hpp  Distribution.hpp  EmulationGame.cpp  EmulationGame.hpp  Eval.cpp  Eval.hpp  Game.cpp  Game.hpp  MPSC.hpp  Move.cpp  Move.hpp  Piece.cpp  Piece.hpp  Search.cpp  Search.hpp  TetrisConstants.hpp  UCT.cpp  UCT.hpp  VersusGame.cpp  VersusGame.hpp  rng.cpp  rng.hpp
cpp/Tetris/bot/: Eval.cpp  Eval.hpp  Search.cpp  Search.hpp  UCT.cpp  UCT.hpp
cpp/Tetris/game/: Board.hpp  Chance.hpp  EmulationGame.cpp  EmulationGame.hpp  Move.hpp  Opponent.cpp  Opponent.hpp  Piece.cpp  Piece.hpp  VersusGame.cpp
cpp/Tetris/game/engine/: Board.hpp  Game.cpp  Game.hpp  Piece.cpp  Piece.hpp  TetrisConstants.hpp
cpp/Tetris/nn/: NN.cpp  NN.hpp
cpp/Tetris/util/: Distribution.cpp  Distribution.hpp  MPSC.hpp  fasthash.h  pext.hpp  rng.cpp  rng.hpp
cpp/Util/: Distribution.cpp  Distribution.hpp  MPSC.hpp  SPSC.hpp  fasthash.cpp
notes/: Plans for this project.md
notes/.obsidian/: workspace.json
python/: nana_torch.py  out.txt  out2.txt  perft.py  run.py  run.py.lprof  training.py  umap.py
python/weights/: decoder.pt  embedding.pt  encoder.pt  predictor_d.pt  predictor_s.pt
